2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c
	(run_cmd_args): If receive parameters error on
	ipmi_monitoring_bitmask_string() call, assume bogus bitmask
	returned from remote machine.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-reading.c: Fix compiler warning.
	Fix error return bug.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/cmds/ipmi-sensor-cmds.c: Make "sensor_state",
	"sensor_state1", "sensor_state2", and "reserved2".

	*
	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c:
	Adjust for change.

	* ipmi-sensors/src/ipmi-sensors-reading.c: Adjust for change.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-reading.c: Code cleanup.

	* common/src/tool-fiid-wrappers.h (_FIID_OBJ_LEN_BYTES): Remove
	macro.
	
2008-06-02  Albert Chu <chu11@llnl.gov>

	* common/src/tool-common.c (ipmi_open): Code cleanup.
	
2008-06-02  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-reading.c: Support optional sensor
	state fields as stated in IPMI spec.  Support workaround for Dell
	no sensor-state returned issue.

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c:
	Support workaround for Dell no sensor-state returned issue.
	
2008-06-02  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-and-workarounds.txt: Add info on Dell sensor issue.

	* libfreeipmi/src/cmds/ipmi-sensor-cmds.c: Fix declarations.  Some
	required fields are actually optional.

	* common/src/tool-fiid-wrappers.h (_FIID_OBJ_LEN_BYTES): New
	macro.

	* common/src/tool-fiid-wrappers.h,
	libfreeipmi/src/libcommon/ipmi-fiid-wrappers.h,
	libfreeipmi/src/api/ipmi-fiid-wrappers-api.h: Check for good
	return value from fiid_obj_get() calls.

	* libfreeipmi/src/fiid/fiid.c (fiid_obj_copy): Fix errnum return
	corner case.
	
2008-06-02  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c